Comment out collapseable log for deployment due to bugs

--- a/react-app/src/components/LogsPage/LogsPage.css
+++ b/react-app/src/components/LogsPage/LogsPage.css
@@ -10,11 +10,11 @@
     transition: all 0.2s ease-in-out;
 }
 
-.log-date-heading:hover {
+/* .log-date-heading:hover {
     border-bottom-color: var(--french-violet);
     color: var(--french-violet);
     cursor: pointer;
-}
+} */
 
 
 .log-box {
@@ -22,7 +22,16 @@
     flex-direction: row;
     justify-content: space-between;
     transition: all 0.5s ease-in-out;
+    padding: 30px;
+    /* opacity: 0;
+    height: 0px;
+    padding: 0px;
+    overflow: hidden; */
 }
+
+
+
+
 
 .log-box:hover .edit-delete-log {
     display: flex;
